; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m68k/mac/extr_debug.c_mac_sccb_out.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m68k/mac/extr_debug.c_mac_sccb_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i8 }

@uSEC = common dso_local global i32 0, align 4
@scc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8)* @mac_sccb_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mac_sccb_out(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  store i8 %0, i8* %2, align 1
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* @uSEC, align 4
  store i32 %5, i32* %3, align 4
  br label %6

6:                                                ; preds = %11, %4
  %7 = load i32, i32* %3, align 4
  %8 = icmp sgt i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %6
  %10 = call i32 (...) @barrier()
  br label %11

11:                                               ; preds = %9
  %12 = load i32, i32* %3, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %3, align 4
  br label %6

14:                                               ; preds = %6
  br label %15

15:                                               ; preds = %14
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @scc, i32 0, i32 0), align 4
  %17 = and i32 %16, 4
  %18 = icmp ne i32 %17, 0
  %19 = xor i1 %18, true
  br i1 %19, label %4, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @uSEC, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %27, %20
  %23 = load i32, i32* %3, align 4
  %24 = icmp sgt i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %22
  %26 = call i32 (...) @barrier()
  br label %27

27:                                               ; preds = %25
  %28 = load i32, i32* %3, align 4
  %29 = add nsw i32 %28, -1
  store i32 %29, i32* %3, align 4
  br label %22

30:                                               ; preds = %22
  %31 = load i8, i8* %2, align 1
  store i8 %31, i8* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @scc, i32 0, i32 1), align 4
  ret void
}

declare dso_local i32 @barrier(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
